--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -35,7 +35,8 @@
   }
 }
 
-/* ----------------- HEADER ----------------- */
+// APLICACION DE LOS MIXIN EN ELEMENTOS DE HEADER
+
 header {
   .navbar-nav.ms-auto {
     align-items: center;
