--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -33,7 +33,8 @@
   }
 }
 
-// FOOTER
+// APLICACION DE LOS MIXIN EN ELEMENTOS DE FOOTER
+
 footer {
   @include flex-container(flex, space-between, center);
   @include padding(0.8rem);
