actualizo ajustes contacto

--- a/css/styles.css
+++ b/css/styles.css
@@ -605,6 +605,7 @@ main.contacto .contenedor {
   display: grid;
   min-height: auto;
   width: 100%;
+  max-width: 1400px;
   margin: auto;
   padding-top: 4rem;
   padding-bottom: 4rem;
