--- a/css/styles.css
+++ b/css/styles.css
@@ -2,12 +2,17 @@
 * {
   padding: 0;
   margin: 0;
+  min-width: 0;
   box-sizing: border-box;
   text-decoration: none;
   list-style: none;
   font-family: "Roboto", sans-serif;
   font-style: normal;
   text-align: center;
+}
+
+body {
+  min-height: 100dvh;
 }
 
 .navbar a {
@@ -304,6 +309,7 @@ h2 strong,
 p,
 strong {
   letter-spacing: 0.25rem;
+  text-wrap: balance;
 }
 
 h3,
@@ -338,6 +344,7 @@ h4 {
 p {
   font-size: 1.2rem;
   font-weight: 400;
+  text-wrap: pretty;
 }
 
 strong {
