--- a/sass/utilities/_reset.scss
+++ b/sass/utilities/_reset.scss
@@ -2,6 +2,7 @@
 * {
   padding: 0;
   margin: 0;
+  min-width: 0;
   box-sizing: border-box;
   text-decoration: none;
   list-style: none;
@@ -10,3 +11,7 @@
   text-align: center;
 }
 
+// RESET PARA ESTILOS DEL BODY
+body {
+  min-height: 100dvh;
+}
