--- a/sass/pages/_contacto.scss
+++ b/sass/pages/_contacto.scss
@@ -51,6 +51,7 @@ main.contacto {
         }
 
         input,
+        select,
         textarea,
         button {
           max-width: 10rem;
@@ -60,6 +61,7 @@ main.contacto {
         }
 
         input,
+        select,
         textarea {
           font-style: italic;
         }
