--- a/css/styles.css
+++ b/css/styles.css
@@ -428,11 +428,16 @@ main {
 .main .section3 .divisor2 img,
 .main .section3 .divisor3 .mapa,
 main#musica div section div img,
-main#musica .divisor-2 .section4 a,
+main#musica .divisor-2 .section4 a {
+  border-radius: 20px;
+}
+
 main.contacto .contenedor .section3 form input,
 main.contacto .contenedor .section3 form textarea,
+main.contacto .contenedor .section3 form select,
 main.contacto .contenedor .section3 form button {
-  border-radius: 20px;
+  border-radius: 10px;
+  padding: 2px;
 }
 
 footer {
@@ -646,6 +651,7 @@ main.contacto .contenedor .section3 form label {
   letter-spacing: 0.25rem;
 }
 main.contacto .contenedor .section3 form input,
+main.contacto .contenedor .section3 form select,
 main.contacto .contenedor .section3 form textarea,
 main.contacto .contenedor .section3 form button {
   max-width: 10rem;
@@ -654,6 +660,7 @@ main.contacto .contenedor .section3 form button {
   letter-spacing: 1px;
 }
 main.contacto .contenedor .section3 form input,
+main.contacto .contenedor .section3 form select,
 main.contacto .contenedor .section3 form textarea {
   font-style: italic;
 }
@@ -693,6 +700,10 @@ main.contacto .contenedor .section3 form .checkbox input#checkbox {
     grid-template-areas: "section1 section3" "section2 section3";
     align-items: self-start;
   }
+  main.contacto .contenedor h1 {
+    font-size: 3rem;
+    margin-bottom: 2rem;
+  }
 }
 @media (max-width: 768px) {
   h1,
@@ -719,6 +730,9 @@ main.contacto .contenedor .section3 form .checkbox input#checkbox {
     grid-template-areas: "section1" "section2" "section3";
     padding: 2rem;
   }
+  main.contacto .contenedor h1 {
+    font-size: 2rem;
+  }
   main.contacto .contenedor .section3 form {
     padding-top: 1.5rem;
     gap: 0.1rem;
@@ -727,6 +741,7 @@ main.contacto .contenedor .section3 form .checkbox input#checkbox {
     width: 18rem;
   }
   main.contacto .contenedor .section3 form input,
+  main.contacto .contenedor .section3 form select,
   main.contacto .contenedor .section3 form textarea {
     margin-right: 0;
   }
@@ -794,10 +809,17 @@ main.contacto .contenedor .section3 form .checkbox input#checkbox {
     animation-delay: 0.4s;
     animation-fill-mode: forwards;
   }
+  main.contacto .contenedor .section3 form {
+    width: 100%;
+    flex-direction: column;
+  }
+  main.contacto .contenedor .section3 form label {
+    display: none;
+  }
   main.contacto .contenedor .section3 form input,
+  main.contacto .contenedor .section3 form select,
   main.contacto .contenedor .section3 form textarea {
-    width: 80%;
-    padding: 0;
+    margin: auto;
   }
 }
 @media (max-width: 290px) {
@@ -848,12 +870,7 @@ main.contacto .contenedor .section3 form .checkbox input#checkbox {
   main#musica .divisor-2 .section4 img {
     width: 90%;
   }
-  main.contacto .contenedor .section3 form {
-    width: 100%;
-    flex-direction: column;
-  }
-  main.contacto .contenedor .section3 form input,
-  main.contacto .contenedor .section3 form textarea {
-    margin: auto;
+  main.contacto .contenedor h1 {
+    font-size: 1rem;
   }
 }/*# sourceMappingURL=styles.css.map */
