--- a/sass/breakpoints/_small.scss
+++ b/sass/breakpoints/_small.scss
@@ -43,6 +43,9 @@
   // declaraciones en contacto.html
   main.contacto {
     .contenedor {
+      h1 {
+        font-size: 2rem;
+      }
       position: static;
       grid-template-columns: repeat(1, 1fr);
       grid-template-areas:
@@ -59,6 +62,7 @@
         width: 18rem;
 
         input,
+        select,
         textarea {
           margin-right: 0;
         }
