--- a/sass/global/_colores.scss
+++ b/sass/global/_colores.scss
@@ -52,6 +52,7 @@ main .divisor2 .card a.link:hover,
 main#musica .divisor-2 .section4 a:hover,
 main.contacto .contenedor .section3 form button:hover,
 main.contacto .contenedor .section3 form input:hover,
+main.contacto .contenedor .section3 form select:hover,
 main.contacto .contenedor .section3 form textarea:hover,
 header a[aria-current="page"],
 .nav-link:hover {
@@ -83,8 +84,15 @@ p,
 a,
 .main .section3 .divisor1 h2,
 main.contacto .contenedor .section3 form label,
+main.contacto .contenedor .section3 form select,
 main.contacto .contenedor .section3 form button {
   color: $color-segundo;
+}
+
+main.contacto .contenedor .section3 form input,
+main.contacto .contenedor .section3 form select,
+main.contacto .contenedor .section3 form textarea {
+  background-color: rgba(234, 234, 234, 0.1);
 }
 
 .toggleDark,
@@ -97,6 +105,7 @@ footer div#redes ul li a:hover {
 
 main .divisor2 .card a.link:hover,
 main#musica .divisor-2 .section4 a:hover,
+main.contacto .contenedor .section3 form select:hover,
 main.contacto .contenedor .section3 form button:hover,
 main.contacto .contenedor .section3 form input:hover,
 main.contacto .contenedor .section3 form textarea:hover,
@@ -200,6 +209,7 @@ body.light-mode {
   a,
   .main .section3 .divisor1 h2,
   main.contacto .contenedor .section3 form label,
+  main.contacto .contenedor .section3 form select,
   main.contacto .contenedor .section3 form button {
     color: $color-segundo-claro;
   }
