--- a/sass/global/_colores.scss
+++ b/sass/global/_colores.scss
@@ -6,6 +6,7 @@ $color-tercero: rgb(225, 202, 83);
 $color-cuarto: rgb(83, 152, 225);
 $color-fondo-op50: rgba(0, 0, 0, 0.5);
 $color-fondo-op100: rgb(0, 0, 0);
+$color-primero-transparente: rgba(234, 234, 234, 0.1);
 
 @mixin background-image($url) {
   background: linear-gradient(#{$color-fondo-op100}, #{$color-fondo-op50}),
@@ -22,6 +23,7 @@ $color-tercero-claro: rgb(83, 152, 225);
 $color-cuarto-claro: rgb(83, 152, 225);
 $color-fondo-op50-claro: rgba(220, 220, 220, 0.5);
 $color-fondo-op100-claro: rgb(220, 220, 220, 0.9);
+$color-primero-claro-transparente: rgba(244, 244, 244, 0.4);
 
 // 'DARK MODE' = Declaraciones
 
@@ -61,14 +63,21 @@ header a[aria-current="page"],
 
 header nav.navbar,
 footer,
-.main .section3 .divisor1 h2,
-.main .divisor2 .card a.link,
 main#musica .divisor-2 .section4 a,
 main.contacto .contenedor .section3 form button {
   background-color: $color-primero;
 }
 
-.main .section3 .divisor3 .mapa {
+.main .section3 .divisor1 h2,
+.main .section3 .divisor2 h3,
+.main .section3 .divisor2 img,
+.main .divisor2 .card a.link,
+.main .section3 .divisor3 .mapa,
+main#musica .divisor-1 section div img,
+main#musica .divisor-2 .section4 img,
+main.contacto .contenedor .section3 form button,
+main#musica .divisor-2 .section4 a
+ {
   border: solid 1px $color-primero;
 }
 
@@ -96,10 +105,12 @@ main.contacto .contenedor .section3 form button {
   border: solid 1px $color-primero;
 }
 
+.main .section3 .divisor1 h2,
+.main .divisor2 .card a.link,
 main.contacto .contenedor .section3 form input,
 main.contacto .contenedor .section3 form select,
 main.contacto .contenedor .section3 form textarea {
-  background-color: rgba(234, 234, 234, 0.1);
+  background-color: $color-primero-transparente;
 }
 
 .toggleDark,
@@ -119,17 +130,6 @@ main.contacto .contenedor .section3 form textarea:hover,
 a[aria-current="page"],
 .nav-link:hover {
   background-color: $color-tercero;
-}
-
-.main .section3 .divisor1 h2,
-.main .section3 .divisor2 h3,
-.main .section3 .divisor2 img,
-.main .divisor2 .card a.link,
-main#musica .divisor-1 section div img,
-main#musica .divisor-2 .section4 img,
-main.contacto .contenedor .section3 form button,
-main#musica .divisor-2 .section4 a {
-  border: solid 1px $color-tercero;
 }
 
 .checkbox input#checkbox {
@@ -189,16 +189,18 @@ body.light-mode {
 
   header nav.navbar,
   footer,
-  .main .section3 .divisor1 h2,
-  .main .divisor2 .card a.link,
   main#musica .divisor-2 .section4 a,
   main.contacto .contenedor .section3 form button {
     background-color: $color-primero-claro;
   }
 
-  .main .section3 .divisor3 .mapa {
-    border: solid 1px $color-primero-claro;
-  }
+  .main .section3 .divisor1 h2,
+.main .divisor2 .card a.link,
+main.contacto .contenedor .section3 form input,
+main.contacto .contenedor .section3 form select,
+main.contacto .contenedor .section3 form textarea {
+  background-color: $color-primero-claro-transparente;
+}
 
   main.contacto {
     @include background-image("../assets/img/background/2.webp");
@@ -237,17 +239,6 @@ body.light-mode {
   a[aria-current="page"],
   .nav-link:hover {
     background-color: $color-tercero-claro;
-  }
-
-  .main .section3 .divisor1 h2,
-  .main .section3 .divisor2 h3,
-  .main .section3 .divisor2 img,
-  .main .divisor2 .card a.link,
-  main#musica .divisor-1 section div img,
-  main#musica .divisor-2 .section4 img,
-  main.contacto .contenedor .section3 form button,
-  main#musica .divisor-2 .section4 a {
-    border: solid 1px $color-tercero-claro;
   }
 
   .checkbox input#checkbox {
