--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -1,4 +1,9 @@
-@mixin section-padding($padding-top, $padding-right, $padding-bottom, $padding-left) {
+@mixin section-padding(
+  $padding-top,
+  $padding-right,
+  $padding-bottom,
+  $padding-left
+) {
   padding-top: $padding-top;
   padding-right: $padding-right;
   padding-bottom: $padding-bottom;
@@ -80,10 +85,12 @@ main#index {
 
       a.link {
         border-radius: 20px;
-        padding: 1rem;
-        margin-bottom: 1rem;
+        padding: 0.5rem;
+        margin-bottom: 4rem;
+        font-size: 1.6rem;
+        width: 80%;
       }
-
+      
       img {
         width: 80%;
       }
